# kokoro-studio

./: .gitignore  DONATIONS.md  LICENSE  PLAN.md  README.md  fix_comment.py  patch_gui_v3.py  pyproject.toml  requirements.txt  run.bat
_helpers/: _apply.py  _apply_discoverability_pass.py  _apply_ssml_gui_hooks.py  _diag_output.txt  _finish.py  _patch_dialog_fix.py  _patch_dialog_fix2.py  _patch_disc.py  _patch_disc2.py  _patch_v2.py  _placeholder_bytes.txt  _repair_e2_orphan_paren.py  _repair_e9_intro.py  _verify_anchors.py  about_patch.py  debug_placeholder.py  dialogue_sample_fix.py  discoverability_patch.py  match_diag.py  voice_blending_gui_patch.py  voice_blending_post_review_fixes.py  voice_blending_worker_finalize.py  voice_blending_worker_plumb.py
docs/: API.md  USAGE.md
kokoro_studio/: __init__.py  __main__.py  api_server.py  audio_processing.py  audiobook.py  blending.py  cli.py  dialogue.py  document_loader.py  emotional_style.py  engine.py  gui.py  history.py  profiles.py  project_manager.py  pronunciation.py  ssml.py  streaming.py
kokoro_studio/gui/: __init__.py  app.py  batch_worker.py  dialogs.py  editor.py  main_window.py  theme.py  workers.py
tests/: __init__.py  test_api_server.py  test_audio_processing.py  test_batch_worker.py  test_blending.py  test_dialogue.py  test_document_loader.py  test_engine.py  test_history.py  test_profiles.py  test_pronunciation.py  test_ssml.py  test_streaming.py
